[package]
name = "asciidoc2rs"
version = "0.1.0"
authors = ["kPherox <kphrx@kpherox.dev>"]
license = "MIT"
description = "A parser for AsciiDoc"
repository = "https://github.com/kphrx/asciidoc2rs"
keywords = ["asciidoc"]
categories = ["text-processing"]
edition = "2021"


[dependencies]
dyn-clone = "1.0.11"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_with_macros = "2.3.2"
